--- a/style.css
+++ b/style.css
@@ -7,6 +7,8 @@ body {
   background-color: #1a1a1a;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size: 28px;
+  color: #f1f1f1;
+  transition: background-color 0.3s ease, color 0.3s ease;
 }
 
 #container {
@@ -16,6 +18,7 @@ body {
   background-color: #1a1a1a;
   border: 2px solid #f1f1f1;
   overflow: hidden;
+  transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
 .shape {
@@ -30,15 +33,28 @@ body {
   left: 10px;
   padding: 10px;
   background-color: #f1f1f1;
-  color: #2c2c2c;
+  color: black;
   border: none;
   cursor: pointer;
   z-index: 10;
 }
 
-#toggleCollisionBtn:hover {
+#toggleCollisionBtn:hover, #toggleThemeBtn:hover {
   background-color: #2c2c2c;
   color: #f1f1f1;
+  border: solid 1px #f1f1f1;
+}
+
+#toggleThemeBtn {
+  position: absolute;
+  bottom: 10px;
+  left: 10px;
+  padding: 10px;
+  background-color: #f1f1f1;
+  color: black;
+  border: none;
+  cursor: pointer;
+  z-index: 10;
 }
 
 #overlay-container {
@@ -49,11 +65,34 @@ body {
   flex-direction: column;
   justify-content: space-around;
   align-items: start;
-  color: #2c2c2c;
-  z-index: 5;
+  color: #f1f1f1;
 }
 
 #overlay-container h2, #overlay-container p {
   margin: 10px;
 }
 
+body.light-mode {
+  background-color: #f1f1f1;
+  color: #1a1a1a;
+}
+
+#container.light-mode {
+  background-color: #f1f1f1;
+  border-color: #1a1a1a;
+}
+
+.shape.light-mode {
+  background-color: #1a1a1a;
+}
+
+#toggleCollisionBtn.light-mode, #toggleThemeBtn.light-mode {
+  background-color: #1a1a1a;
+  color: white;
+}
+
+#toggleCollisionBtn.light-mode:hover, #toggleThemeBtn.light-mode:hover {
+  background-color: #f1f1f1;
+  color: #1a1a1a;
+  border: solid 1px #1a1a1a;
+}
