--- a/style.css
+++ b/style.css
@@ -1,64 +1,31 @@
 body {
   margin: 0;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(3, 1fr);
   height: 100vh;
   background-color: #1a1a1a;
   font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-  font-size: 28px;
   color: #f1f1f1;
   transition: background-color 0.3s ease, color 0.3s ease;
+  box-sizing: border-box;
 }
 
 #container {
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
   position: relative;
   width: 60vw;
   height: 80vh;
   background-color: #1a1a1a;
-  border: 2px solid #f1f1f1;
+  border: 0.125em solid #f1f1f1;
   overflow: hidden;
   transition: background-color 0.3s ease, border-color 0.3s ease;
 }
 
-.shape {
-  position: absolute;
-  border-radius: 50%;
-  background-color: #f1f1f1;
-}
-
-#toggleCollisionBtn {
-  position: absolute;
-  top: 10px;
-  left: 10px;
-  padding: 10px;
-  background-color: #f1f1f1;
-  color: black;
-  border: none;
-  cursor: pointer;
-  z-index: 10;
-}
-
-#toggleCollisionBtn:hover, #toggleThemeBtn:hover {
-  background-color: #2c2c2c;
-  color: #f1f1f1;
-  border: solid 1px #f1f1f1;
-}
-
-#toggleThemeBtn {
-  position: absolute;
-  bottom: 10px;
-  left: 10px;
-  padding: 10px;
-  background-color: #f1f1f1;
-  color: black;
-  border: none;
-  cursor: pointer;
-  z-index: 10;
-}
-
 #overlay-container {
-  position: absolute;
+  grid-column: 2 / 3;
+  grid-row: 2 / 3;
   width: 60vw;
   height: 80vh;
   display: flex;
@@ -66,10 +33,18 @@ body {
   justify-content: space-around;
   align-items: start;
   color: #f1f1f1;
+  font-size: 1.75em;
+  z-index: 20;
 }
 
 #overlay-container h2, #overlay-container p {
-  margin: 10px;
+  margin: 0.25em;
+}
+
+.shape {
+  position: absolute;
+  border-radius: 50%;
+  background-color: #f1f1f1;
 }
 
 body.light-mode {
@@ -86,6 +61,34 @@ body.light-mode {
   background-color: #1a1a1a;
 }
 
+#toggleCollisionBtn {
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  padding: 0.625em;
+  background-color: #f1f1f1;
+  color: black;
+  border: none;
+  cursor: pointer;
+  z-index: 10;
+}
+
+#toggleCollisionBtn:hover, #toggleThemeBtn:hover {
+  background-color: #2c2c2c;
+  color: #f1f1f1;
+  border: solid 0.0625em #f1f1f1;
+}
+
+#toggleThemeBtn {
+  grid-column: 1 / 2;
+  grid-row: 3 / 4;
+  padding: 0.625em;
+  background-color: #f1f1f1;
+  color: black;
+  border: none;
+  cursor: pointer;
+  z-index: 10;
+}
+
 #toggleCollisionBtn.light-mode, #toggleThemeBtn.light-mode {
   background-color: #1a1a1a;
   color: white;
@@ -94,5 +97,5 @@ body.light-mode {
 #toggleCollisionBtn.light-mode:hover, #toggleThemeBtn.light-mode:hover {
   background-color: #f1f1f1;
   color: #1a1a1a;
-  border: solid 1px #1a1a1a;
+  border: solid 0.0625em #1a1a1a;
 }
