--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  grid-template-rows: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
   gap: 0.125em;
   height: 100vh;
   background-color: #1a1a1a;
@@ -14,7 +14,7 @@ body {
 
 #container {
   grid-column: 2 / 3;
-  grid-row: 2 / 3;
+  grid-row: 2 / 4;
   position: relative;
   width: 60vw;
   height: 80vh;
@@ -26,7 +26,7 @@ body {
 
 #overlay-container {
   grid-column: 2 / 3;
-  grid-row: 2 / 3;
+  grid-row: 2 / 4;
   width: 60vw;
   height: 80vh;
   display: flex;
@@ -62,7 +62,7 @@ body.light-mode {
   background-color: #1a1a1a;
 }
 
-#toggleCollisionBtn, #toggleThemeBtn {
+#toggleCollisionBtn, #toggleThemeBtn, #changeColorBtn, #resetColorBtn {
   padding: 0.625em;
   background-color: #1a1a1a;
   color: #f1f1f1;
@@ -73,31 +73,40 @@ body.light-mode {
   border-radius: 5%;
 }
 
-
 #toggleCollisionBtn {
   grid-column: 1 / 2;
   grid-row: 1 / 2;
 }
 
-#toggleCollisionBtn:hover, #toggleThemeBtn:hover {
+#toggleThemeBtn {
+  grid-column: 1 / 2;
+  grid-row: 4 / 5;
+}
+
+#toggleCollisionBtn:hover, #toggleThemeBtn:hover, #changeColorBtn:hover, #resetColorBtn:hover {
   background-color: #2c2c2c;
   color: #f1f1f1;
   border: solid 0.0625em #f1f1f1;
 }
 
-#toggleThemeBtn {
-  grid-column: 1 / 2;
+#toggleCollisionBtn.light-mode, #toggleThemeBtn.light-mode, #changeColorBtn.light-mode, #resetColorBtn.light-mode {
+  background-color: #f1f1f1;
+  color: #1a1a1a;
+  border: solid 0.0625em #1a1a1a;
+}
+
+#toggleCollisionBtn.light-mode:hover, #toggleThemeBtn.light-mode:hover, #changeColorBtn.light-mode:hover, #resetColorBtn.light-mode:hover {
+  background-color: #f1f1f1;
+  color: #1a1a1a;
+  border: solid 0.0625em #1a1a1a;
+}
+
+#changeColorBtn {
+  grid-column: 3 / 4;
+  grid-row: 2 / 3;
+}
+
+#resetColorBtn {
+  grid-column: 3 / 4;
   grid-row: 3 / 4;
-}
-
-#toggleCollisionBtn.light-mode, #toggleThemeBtn.light-mode {
-  background-color: #f1f1f1;
-  color: #1a1a1a;
-  border: solid 0.0625em #1a1a1a;
-}
-
-#toggleCollisionBtn.light-mode:hover, #toggleThemeBtn.light-mode:hover {
-  background-color: #f1f1f1;
-  color: #1a1a1a;
-  border: solid 0.0625em #1a1a1a;
 }
