--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body {
   grid-template-rows: repeat(3, 1fr);
   gap: 0.125em;
   height: 100vh;
-  background-color: #1a1a1a;
+  background-color: red;
   font-family: 'Trebuchet MS', Arial, sans-serif;
   color: #f1f1f1;
   box-sizing: border-box;
